# Crud-estudos-bd

./: LICENSE  README.md  pyproject.toml
NoSQL/: Client.json  Loja.json  Produto.json  Vendas.json
SQL/: loja.sql
loja_db/: app.py  database.py  models.py  schemas.py  settings.py
migrations/: env.py
migrations/versions/: 6b93f9b0f083_create_users_lojas.py  ae7a218e92df_create_users_lojas.py  ff93ec95fe03_create_users_cliente.py
tests/: conftest.py  test_app.py  test_db.py
